syntax = "proto3";
package gatepb;
option go_package = "qq-farm-bot/proto/gatepb";

enum MessageType {
    None = 0;
    Request = 1;
    Response = 2;
    Notify = 3;
}

message Meta {
    string service_name = 1;
    string method_name = 2;
    int32 message_type = 3;
    int64 client_seq = 4;
    int64 server_seq = 5;
    int64 error_code = 6;
    string error_message = 7;
    map<string, bytes> metadata = 8;
}

message Message {
    Meta meta = 1;
    bytes body = 2;
}

message EventMessage {
    string message_type = 1;
    bytes body = 2;
}

message KickoutNotify {
    int64 reason = 1;
    string reason_message = 2;
}
